--- a/b17092.md
+++ b/b17092.md
@@ -1,4 +1,6 @@
-# Design your own Google Map
+# Manvi Gupta (@Manvi07)
+
+## Design your own Google Map
 
 ## Table of Contents
 1. Introduction
@@ -16,17 +18,17 @@ Trying to exploit some different tools, I decided to use the <b> Boolean Constra
 
 
 ### Boolean Satisfiability
-Boolean Satisfiability has become quite popular lately. In fact, many problems are more convenient to model and solve using boolean algebra as compared to traditional ILP using [CPLEX](https://www.ibm.com/analytics/cplex-optimizer) like solvers. 
+Boolean Satisfiability has become quite popular lately. In fact, many problems are more convenient to model and solve using boolean algebra as compared to traditional ILP using [CPLEX](https://www.ibm.com/analytics/cplex-optimizer) like solvers.
 
 To give a basic description of how boolean satisfiability works, we take a set of boolean variables and the boolean constraints in [CNF](https://en.wikipedia.org/wiki/Conjunctive_normal_form) form. Initially, all the boolean variables are unassigned and the aim is to find a satisfying assignment for the variables such that all the constraints are satisfied or return that "no such assignment exists which satisfies all the given constraints", if that's the case. SAT problems are NP-complete, thus all the known algorithms ([DPLL](https://en.wikipedia.org/wiki/DPLL_algorithm), [CDCL](https://en.wikipedia.org/wiki/Conflict-driven_clause_learning), etc) to solve SAT problems have exponential worst-case complexity, however, it can be improved a lot using Heuristic functions.
 
 #### My own implementation of a DPLL based SAT solver can be found at [github.com/Manvi07/SATSolver](https://github.com/Manvi07/SATSolver).
 
 ### Pseudo-Boolean Satisfiability
-Recently, the Boolean Satisfiability Problems have been extended to something known as <b>Pseudo-Boolean Constraints Satisfaction</b>. This method makes it very easy to model complex constraints due to the high expressive power of PB constraints and equips the normal SAT solvers with the ability to handle Boolean Optimization problems, in which we need to maximize or minimize a given function. 
+Recently, the Boolean Satisfiability Problems have been extended to something known as <b>Pseudo-Boolean Constraints Satisfaction</b>. This method makes it very easy to model complex constraints due to the high expressive power of PB constraints and equips the normal SAT solvers with the ability to handle Boolean Optimization problems, in which we need to maximize or minimize a given function.
 
 Mathematically, a pseudo-boolean function can be represented as follows:
- 
+
 f : B<sup>n</sup> → <b>R </b>
 
 where, `B` = {0, 1} and `n` is a non-negative integer.
@@ -51,16 +53,16 @@ while TRUE do
 end while
  ```
 
-A _decision level_ refers to the last assignment made in the depth in a decision tree. The `DECIDE` function decides the assignments at the current decision level, extending the existing set of partial assignments. 
+A _decision level_ refers to the last assignment made in the depth in a decision tree. The `DECIDE` function decides the assignments at the current decision level, extending the existing set of partial assignments.
 
-If all the variables are assigned and there is no conflicting assignment, it means that we have found a solution, thus return SAT. Else, we call the `DEDUCE` function which applies BCP, and if there's a conflict we need to `BACKTRACK` to the second last _decision level_. Also, a `learned clause` is added to the existing set of clauses, and the procedure continues. 
+If all the variables are assigned and there is no conflicting assignment, it means that we have found a solution, thus return SAT. Else, we call the `DEDUCE` function which applies BCP, and if there's a conflict we need to `BACKTRACK` to the second last _decision level_. Also, a `learned clause` is added to the existing set of clauses, and the procedure continues.
 
 
 ## Stored Data
-We store the World Map in the form of a graph in which nodes represent the places/regions and edges represent the paths/ways/roads between these nodes. The edges are weighted by a `Cost`, that is computed using `geographical distance` and `live traffic` so that the cost has contributions from both. Thus, we aim to find the shortest route with the least traffic. 
+We store the World Map in the form of a graph in which nodes represent the places/regions and edges represent the paths/ways/roads between these nodes. The edges are weighted by a `Cost`, that is computed using `geographical distance` and `live traffic` so that the cost has contributions from both. Thus, we aim to find the shortest route with the least traffic.
 
 `Cost = f(dist, traffic)`
- 
+
 Here, `f(x,y)` is a function of the type `ax + by`, and the values of `a` and `b` decide, how much a factor affects the cost.
 
 Thus a node may be defined as:
@@ -68,7 +70,7 @@ Thus a node may be defined as:
 struct Node{
     string place_name;
     bool ID;
-    pair<double, double> latitude, longitude; 
+    pair<double, double> latitude, longitude;
     vector<struct Node>neighbors;   
 };
 ```
@@ -88,7 +90,7 @@ We also need to define a data structure that holds all the Nodes and Edges in or
 class Graph{
 
  public:
-    set<struct Node>graph; 
+    set<struct Node>graph;
     void AddNode(struct Node n)
     {
         Struct Node A = {"IIT", 0, {28, 5436}, {77, 1986}, {"B, "C"}};
@@ -115,11 +117,11 @@ We go from node <b>`I` (source)</b> to <b>`H` (destination)</b> using the path t
 As introduced, we find the Shortest path by modeling the problem in the form of <b>Boolean & Psedudo-Boolean Satisfiability Constraints</b>. The boolean ID associated with the node represents the boolean variable. <b> The value 1 of the ID means that the node will be a part of the best path and 0 means that it's not. </b> We need to satisfy the following constraints:
 1. For the source and the destination, <b> exactly 1 </b> edge can be a part of the path.
 <b> E.g. </b> here, exactly one of {a, b, c} can be true. We can model this as a psedo-boolean constraint as follows:
-   
-   `a + b + c = 1` 
-   
+
+   `a + b + c = 1`
+
    `h + k + l + g = 1`
-   
+
    Or as a boolean constraint as follows:
 ```
    P: (a ∨ b ∨ c) ∧ (¬a ∨ ¬b) ∧ (¬b ∨ ¬c) ∧ (¬c ∨ ¬a)
@@ -134,36 +136,36 @@ As introduced, we find the Shortest path by modeling the problem in the form of 
     (i) <b>The node is a part of the shortest path: </b> In this case, exactly 2 connecting edges from that node will be a part of the path, i.e. for node A,
 
     `a + e + d = 2`
-    
+
     (ii) <b> The node is not a part of the shortest path: </b> When the boolean ID associated with that node as well as that of all the associated edges is <i>false</i>, i.e.
 
     `A + a + e + d = 0`
 
    The above 2 pseudo-boolean costraints can be combined as follows:
-   
+
    `2Ā + a + e + d = 2; where (Ā is equivalent to ¬A)`
 
    In the boolean format:
 ```
    P: (a ∧ e)
-   
+
    Q: (e ∧ d)
-   
+
    R: (d ∧ a)
-   
+
    (¬A ∨ P ∨ Q ∨ R) ∧ (A ∨ ¬P) ∧ (A ∨ ¬Q) ∧ (A ∨ ¬R) ∧ (¬P ∨ ¬Q) ∧ (¬Q ∨ ¬R) ∧ (¬R ∨ ¬P)
 ```
 
    P.S. Here comes a thought that if `a` and `d` are true, the above constraint will be satisfied, and thus, the solver would return a result which is technically false. But on thinking a bit deeper, it can be realized that the other 2 constraints would never let that happen :)
 
-3. The contraints till now can be easily solved by a CDCL SAT solver. Now we need to find the path that minimizes the overall cost, for which we need to minimise the sum of edge variables. Here, comes the need of the Pseudo-Boolean Solver. The optimisation function, `h` can be formulated as follows: 
+3. The contraints till now can be easily solved by a CDCL SAT solver. Now we need to find the path that minimizes the overall cost, for which we need to minimise the sum of edge variables. Here, comes the need of the Pseudo-Boolean Solver. The optimisation function, `h` can be formulated as follows:
 
    `min(2a + 2b + 3c + 4d + 2e + f + 2g + 3h + i + j + k + l)`
- 
+
 Minimization of Linear the Pseudo Boolean function can be achieved using the method of <b>Partially Minimizing Points</b> as described in [[5].](https://link.springer.com/chapter/10.1007/978-3-642-85823-9_6)
 
-<!-- As introduced, we know that a PB function is a real valued function with bi-valent (0, 1) variables. 
-Let there be a vector, <b>v : (x1, x2, ..., xn) ∈ B<sup>n</sup></b>, such that the function `c1x1 + c2x2 + c3x3+ ... + cnxn` reaches its global minimum at `v`, which is defined as follows: 
+<!-- As introduced, we know that a PB function is a real valued function with bi-valent (0, 1) variables.
+Let there be a vector, <b>v : (x1, x2, ..., xn) ∈ B<sup>n</sup></b>, such that the function `c1x1 + c2x2 + c3x3+ ... + cnxn` reaches its global minimum at `v`, which is defined as follows:
 
 ```
 for(int i=1; i<=n; i++)
@@ -174,7 +176,7 @@ for(int i=1; i<=n; i++)
         ci = 0;
 }
 ``` -->
-<!-- 
+<!--
 Now, if our optimisation function is subject to certain other (linear or non-linear) constraints, as it is in our case, we follow 3 main steps:
 
 1. Calculate families of solution from the given set of constraints (F<sub>1</sub>, F<sub>2</sub>, ..., F<sub>p</sub>).
@@ -182,7 +184,7 @@ Now, if our optimisation function is subject to certain other (linear or non-lin
 3. Determination of `{min{min[f(X)] ∀(X ∈ Fk)} ∀k}`. -->
 
 ### Efficiency & Quick Routing
-There is definitely a trade-off between accuracy and speed. The above algorithm can have exponential time complexity in worst-case, hence not suitable for quick routing in case the user takes a wrong turn. 
+There is definitely a trade-off between accuracy and speed. The above algorithm can have exponential time complexity in worst-case, hence not suitable for quick routing in case the user takes a wrong turn.
 
 However, since the last constraint is the main bottleneck, in that case, we can avoid the constraint for the "shortest path" and find a "possible path" quickly, because it is very easy to add more constraints due to the boolean formulation.
 
