--- a/b19042.md
+++ b/b19042.md
@@ -1,3 +1,5 @@
+# Manan Shah (@cs-mshah)
+
 <style TYPE="text/css">
 code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
 </style>
@@ -17,7 +19,7 @@ MathJax.Hub.Queue(function() {
 </script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>
 
-# My own Google Map
+## My own Google Map
 
 ## Table of Contents
 1. Introduction
@@ -135,7 +137,7 @@ Also we used unordered_map as the vertices might not be a contiguous array becau
 
 #### A* search algorithm:
 
-We can imagine the dijkstra's algorithm as an increasing search circle of processed vertices with increasing path lengths from the start. The bidirectional version can be imagined as two circles increasing-each from its source and stopping when they touch. In the process we see that several nodes which aren't relevant to the path have been visited. So what should be done to direct the search more linearly towards the destination? We still want to use the dijkstra, but want to direct its flow. 
+We can imagine the dijkstra's algorithm as an increasing search circle of processed vertices with increasing path lengths from the start. The bidirectional version can be imagined as two circles increasing-each from its source and stopping when they touch. In the process we see that several nodes which aren't relevant to the path have been visited. So what should be done to direct the search more linearly towards the destination? We still want to use the dijkstra, but want to direct its flow.
 
 - We define the potentials $\pi(v)$ for every vertex to be some real number.
 - And for every edge: $l_\pi(u,v)=l(u,v)-\pi(u)+\pi(v)$
@@ -209,5 +211,3 @@ Ex: USA road network has 20M vertices and 50M edges.
 ## Conclusion
 
 In this entire process, I tried to read countless no. of papers, blogs and tried to understand several things. The actual working in the real world is truly complex and that thoght of appreciating the complexity and trying to model on my own gives me a lot of pleasure.
-
-
