--- a/b19123.md
+++ b/b19123.md
@@ -1,4 +1,6 @@
-# Design for Google Map
+# Yamini Sharma (@yamini27)
+
+## Design for Google Map
 
 ## Table of Contents
 1. Introduction
@@ -13,7 +15,7 @@
 
 Google Maps is a web mapping service and it works on the global scale. Since the data and the operating scale on which it has to perform is tremendously large, it requires really fast calculations and very fast processing with no space for errors. The challenges and tasks to build Google Map are the following:
 
-1. Show the User Interface of Google Map according to layout chosen (default, satellite, terrain) with names of all the places and roads (The data of all road and place names and their locations across the globe can be taken from sources like OpenStreetMap but Google Maps has its own different Database). 
+1. Show the User Interface of Google Map according to layout chosen (default, satellite, terrain) with names of all the places and roads (The data of all road and place names and their locations across the globe can be taken from sources like OpenStreetMap but Google Maps has its own different Database).
 
 2. 'Travel From' tab if autofilled by selecting "Your Location" option which needs the 'Google location services' to be turned ON, using the GPS location of the device, its latitude and longitude are received and stored. Or if filled by typing in the name of initial location, the name of the location is searched in the Data and its corresponding latitude and longitude are known through "Geocoding" (translation of address to latitude,longitude). And the same process of Geocoding is adopted for 'Travel To' tab representing the final destination's name.
 
@@ -29,11 +31,11 @@ Google Maps is a web mapping service and it works on the global scale. Since the
 
 ## Stored Data
 
-A storage space within the device is acquired when the Google Maps App is installed, this is used to download the map of Globe that is shown as User Interface even when the Mobile Data is OFF i.e. user is offline. Other than this there are two types of Data that Google maps need to be store: 
-1. One is the associated with the user(device) that comes into existence when Google Maps application is used. This data is stored locally on the device as Location History that can be viewed in the "Your Timeline" feature of Google Maps. Also small bits of informations like your device GPS coordinates, speed are continuously sent anonimously to the server database that is the base of real-time traffic calculations and also contributes to 'usual/default' data which is used to provide services in case Google location services are turned OFF. 
+A storage space within the device is acquired when the Google Maps App is installed, this is used to download the map of Globe that is shown as User Interface even when the Mobile Data is OFF i.e. user is offline. Other than this there are two types of Data that Google maps need to be store:
+1. One is the associated with the user(device) that comes into existence when Google Maps application is used. This data is stored locally on the device as Location History that can be viewed in the "Your Timeline" feature of Google Maps. Also small bits of informations like your device GPS coordinates, speed are continuously sent anonimously to the server database that is the base of real-time traffic calculations and also contributes to 'usual/default' data which is used to provide services in case Google location services are turned OFF.
 2. Other one is the Database for the pre-processing and User Interface that is there forever and is always being updated periodically with the help of collected GPS, Location History and other datas of Users, new updates from all the resources. As there are many sources from where Maps get the data, each pack of data has to be engineered to set it to the right format and then combine with other data packs to work together.
 Huge data comes from numerous sources across the globe namely Government, local transport departments, road sensors, partner companies that collect traffic data for study, Satellite images, contributions via MapMaker, street view, locayion services, etc.
-We all know that today, memory and storage are no longer issues as they were until the last century. The issue now is 'Time'. With time, we need faster and faster solutions. Hence, the real task lies in organising that huge bunch of data to extract the most out of it. Wisely choosing data structures and attributes so that no unnecessary storage or searching or iteration is done and there is minimum space for errors. 
+We all know that today, memory and storage are no longer issues as they were until the last century. The issue now is 'Time'. With time, we need faster and faster solutions. Hence, the real task lies in organising that huge bunch of data to extract the most out of it. Wisely choosing data structures and attributes so that no unnecessary storage or searching or iteration is done and there is minimum space for errors.
 
 - Size of data, and how to store it?
 
@@ -45,20 +47,20 @@ Map is stored as Graph and hence, the whole map is transformed to "Graph" Data S
 
 ## Preprocessing
 
-Definitely, a lot of preprocessing goes on to achieve instantaneous results. Fast algorithms require processing on the map data before any routes are computed. I use "Contraction Hierarchies" method to speed-up the calculation of quickest route. This method creates shortcuts during pre-processing phase which are then used during query to skip over some vertices. Road networks are highly hierarchical e.g.some edges and vertices are more important than others based on the fact that they are more travelled or they connect two cities or are not dead end roads like highways. 
+Definitely, a lot of preprocessing goes on to achieve instantaneous results. Fast algorithms require processing on the map data before any routes are computed. I use "Contraction Hierarchies" method to speed-up the calculation of quickest route. This method creates shortcuts during pre-processing phase which are then used during query to skip over some vertices. Road networks are highly hierarchical e.g.some edges and vertices are more important than others based on the fact that they are more travelled or they connect two cities or are not dead end roads like highways.
 If a road is constructed, it changes infrequently and hence, we have a lot of time to pre-compute the distance between the two cities that it connects before queries are to be addressed. Once computed, this saved "shortcut" with its edge weight can be used for all queries that include that road. Hence, no need to calculate the same thing until there is any update regarding that road. This speeds up the process multiple times and reduces the number of vertices to be looked upon. Most of the run-time during pre-processing phase computes the order in which the vertices are to be contracted.
 
 ## Customisation Phase
 
-Mostly we need to go from one city to another without any exit in between them. But there may be queries when this is not the case. Certain queries demand some preferences like highways or ferries, etc. Live updates about traffic or accidents or road-blockage or checking whether the road is feasible/allowed for the user's means of transportation are to be taken care of. All these are considered during 'Customisation Phase'. Considering all the facts, if there is any need to recompute the shortcut depending on the new edge weights, then this is done in this phase i.e. between pre-processing and Query phase. 
+Mostly we need to go from one city to another without any exit in between them. But there may be queries when this is not the case. Certain queries demand some preferences like highways or ferries, etc. Live updates about traffic or accidents or road-blockage or checking whether the road is feasible/allowed for the user's means of transportation are to be taken care of. All these are considered during 'Customisation Phase'. Considering all the facts, if there is any need to recompute the shortcut depending on the new edge weights, then this is done in this phase i.e. between pre-processing and Query phase.
 
-## Computing Quickest Path 
+## Computing Quickest Path
 
 Time is precious. Hence, we always need the "quickest path" rather than "shortest path" which may consume more time depending on traffic, condition of road, means of transportation and many other parameters. Hence, here I tried to optimize time to travel.
 
 - Algorithms used:
 
-Where Google Maps solves a very complicated day-to-day problem to find the quickest navigation route from any place to any other place according to our means of transport, it is expected that it uses more than one algorithms to deliver its multiple services. Each algorithm addresses a specific issue whether it be finding quickest path or understanding queries or processing GPS or dealing with the complex geometry. 
+Where Google Maps solves a very complicated day-to-day problem to find the quickest navigation route from any place to any other place according to our means of transport, it is expected that it uses more than one algorithms to deliver its multiple services. Each algorithm addresses a specific issue whether it be finding quickest path or understanding queries or processing GPS or dealing with the complex geometry.
 
 Algorithms used in Google Maps:
 1. Algorithms of computational geometry to organize the map data and retrieve it efficiently.
@@ -109,7 +111,7 @@ function Dijkstra(Graph, source):
             if alt < dist[v]:               // A shorter path to v has been found
                 dist[v] <- alt
                 prev[v] <- u
-            
+
     return dist[], prev[]
 
 ```
@@ -119,7 +121,7 @@ Heuristics used through the design:
 
 2. Top-down heuristics (Contraction Hierarchies) are the best approach according to me but they need more pre-processing time which is okay as we have enough time for pre-processing as said before. This classifies vertices which are part of many shortest paths as more important than those which are only needed for a few shortest paths. To compute a nested dissection, graph is recursively seperated into two halves.
 
-3. A* heuristic : I calculate the slope of the line connecting start and end with the help of latitides and longitudes of locations. Then for each vertex throughout the search, I'll add the tangent of the angle = slope of the line connecting vertex and end with the edge width of the road. This will not only help me to avoid a lot of distributed non-relevant paths but also ensure that I always towards the end. 
+3. A* heuristic : I calculate the slope of the line connecting start and end with the help of latitides and longitudes of locations. Then for each vertex throughout the search, I'll add the tangent of the angle = slope of the line connecting vertex and end with the edge width of the road. This will not only help me to avoid a lot of distributed non-relevant paths but also ensure that I always towards the end.
 
 - Will you be able to reroute quickly if the user takes a different turn?
 
@@ -127,7 +129,7 @@ Yes, a code has to be inserted that will check whether the user is on the route 
 
 ## Efficiency and Feasibility
 
-- Theoretically, how would it perform? 
+- Theoretically, how would it perform?
 
 Theoritically, it's possible that it can perform the way it's expected but obviously this is way farther than what actually is working as Google Maps. Performance issues are always there when something has to work in non-ideal circumstances but they can be resolved to an extent with improvements. I can't predict of all the problems it may face while running but theoritically this design looks good to go.
 
@@ -144,13 +146,13 @@ I did the Google searches for:
 [2]. how does google maps store data
 [3]. size of data possessed by google maps
 [4]. Contraction Hierarchies
-[5]. nested dissection 
+[5]. nested dissection
 [6]. Bigtable
 
 [0]. I experimented different cases in Google Maps App to test the theory.
 
 ## Conclusion
 
-Overall, Google Maps service is very much complicated and a lot of the problems and complications arise when something is executed in the real world circumstances. Its remarkable that Maps work in the real world with such high accuracy and user satisfaction. But this success is a result of excellent efforts through these 15 years since its launch tirelessly working on User Experience and also the remarkable years of its making and shaping an idea into reality. Loads of experiments and feedbacks have tansformed Google Maps through the years and its expected that the algorithms and functioning have transformed every year to enhance User Experience. 
+Overall, Google Maps service is very much complicated and a lot of the problems and complications arise when something is executed in the real world circumstances. Its remarkable that Maps work in the real world with such high accuracy and user satisfaction. But this success is a result of excellent efforts through these 15 years since its launch tirelessly working on User Experience and also the remarkable years of its making and shaping an idea into reality. Loads of experiments and feedbacks have tansformed Google Maps through the years and its expected that the algorithms and functioning have transformed every year to enhance User Experience.
 The above design is of course not the same on which Google Maps is based on (true structure will always remain a mistery) and definitely can't match the level of 15 years of hard-work and efforts that hundreds or perhaps thousands of people have made to make it legendary but this is a small effort to understand what may happens behind the scenes with just a click.
 Not only Google Maps but every service is just amazing. Not enough can be realised how much it takes to make anything possible with all the complications of real world sitting outside. I really appreciate everyone's efforts and I think things like Google Maps have revolutionalized the possibilities of technology in the real world.    
