--- a/b19136.md
+++ b/b19136.md
@@ -1,6 +1,6 @@
+# Pranshu Kharkwal (@pranshukharkwal)
 
-
-# Design your own Google Map
+## Design your own Google Map
 
 ## Table of Contents  
 1. Introduction  
