--- a/b19188.md
+++ b/b19188.md
@@ -1,4 +1,6 @@
-# Design your own Google Map
+# Priyam (@Signior-X)
+
+## Design your own Google Map
 
 ## Table of Contents
 1. Introduction
@@ -17,7 +19,7 @@ It is simple, do not store images, instead store them as curves made by points a
 First have some some points stored in the form of JSON in a nosql database for containing various points and their small points making curves, then having them as in the form of svg files so that they can be zoomed. One example of that is here
 ![Delhi](/b19188/delhi.json)
 
-Then these features also contain some images in the form of .png and .jpg. Like storing patched, tiles, etc and mountains layers as a form of .png. 
+Then these features also contain some images in the form of .png and .jpg. Like storing patched, tiles, etc and mountains layers as a form of .png.
 And for landmark features which are very large can be stored as .jpg.
 Then the links between each feature is made usign the graph garph database. Which structs the linkage between different geographic features, as given in this example.
 ![just_an_example_structure](/b19188/graph_example.png)
