--- a/b19266.md
+++ b/b19266.md
@@ -1,6 +1,6 @@
+# Shivani (@Shivani-15)
 
-## Design your own Google Map
-# Pathfinder
+## Design your own Google Map Pathfinder
 
 ## Table of Contents
 1. Introduction
@@ -20,7 +20,7 @@ Maps are stored in the form of Vector Tiles which are small chunks of map. The a
 
 **-  Native Graph Database Management System is used to store data of surface across the globe.**
 It's perhaps the best way to store complex and dynamic relationships in connected data. New routes/roads develop over time, so it will be easy to update the database. Moreover, it will be easy to store information about roads as the properties of edges.
-1. Nodes - Nodes have the location (latitude, longitude) of the place. Roads are either curvy or straight. Curvy roads are divided into ver small parts so that they almost become straight lines. The end points of each straight road are made a node with no label. Other public places are made nodes with labels. 
+1. Nodes - Nodes have the location (latitude, longitude) of the place. Roads are either curvy or straight. Curvy roads are divided into ver small parts so that they almost become straight lines. The end points of each straight road are made a node with no label. Other public places are made nodes with labels.
 It has properties in the form of (name/value pairs).
 * Name: Name of the place.
 * Address: Address of the place.
@@ -28,7 +28,7 @@ It has properties in the form of (name/value pairs).
 3. Relations - Relations hold the information about the road between two nodes, i.e., Number of Lanes and Quality factor.
 
 Demonstartion (Random):
-	
+
 ![image](/b19266/abc.jpg)
 
 
@@ -58,11 +58,11 @@ Columns										 Data Types
 6. Platform number (in case of trains).---						 Character.
 
 ## Preprocessing
-For finding the quickest/shortest path, we do not need all the nodes stored. So we need to filter the data stored. All the nodes with label ‘junction’ are chosen between the starting and final locations and also of limited surrounding areas. Weight of the edges is calculated with the help of formula discussed in the next section. If the user wishes to locate any nearest public place, nodes with that label will also be chosen. 
+For finding the quickest/shortest path, we do not need all the nodes stored. So we need to filter the data stored. All the nodes with label ‘junction’ are chosen between the starting and final locations and also of limited surrounding areas. Weight of the edges is calculated with the help of formula discussed in the next section. If the user wishes to locate any nearest public place, nodes with that label will also be chosen.
 
 
 ## Computing Quickest/Shortest Path
-In some situations, minimum time taking route is preferred while shortest distance route in other cases. 
+In some situations, minimum time taking route is preferred while shortest distance route in other cases.
 
 **For shortest distance:**
 
@@ -79,22 +79,22 @@ To calculate h, we use euclidean distance since the roads can be leading towards
 
 **Minimum time taking route:**
 
-For minimum time taking route, h can not solely depend on distance. It involves other factors like quality of road, less number of turns and traffic at that time. 
+For minimum time taking route, h can not solely depend on distance. It involves other factors like quality of road, less number of turns and traffic at that time.
  But, even g cannot be accurate for time.  More or less, it will also be an estimate.
 So, djikstra algorithm is used to calculate the minimum time taking route.
 Factors taken into consideration to calculate the weight of each node.
 
 **Traffic factor-**
 Traffic factor is assigned according to the traffic conditions. 0 for clear roads, 0.5 for moderate traffic and 1 for heavy traffic.
-Time taken by the chosen vehicle to cross the unit traffic area is added. 
- 
+Time taken by the chosen vehicle to cross the unit traffic area is added.
+
 **Road quality factor-**
 Roads  are assigned a quality factor ranging from 0 to 1 by which the time taken to travel through it is increased due to its poor quality.
 For each vehicle, a threshold quality factor qo is there, below which the road is not safe for that vehicle. If the quality factor is less than it, that node is discarded .
 
 **Acceleration and deacceleration time-**
 For taking a turn, vehicles have to accelerate and decelerate which takes time. So for each turn, twice of deceleration time of that vehicle is added.
-	
+
 		h = (d- u – v - w)/(s*q1) + w/(s*q2) + u*th + v*tm  + n*2*td
 where h is the weight of node\
 &nbsp;d is the distance between nodes\
@@ -120,7 +120,7 @@ Though Djikstra’s algorithm is time consuming but it will give accurate result
 **Time/ Accuracy trade off:**
 
 For finding shortest route, we can also use djikstra’s algorithm which will be more accurate than A* algorithm but will increase the computing time by a big factor.
-We can attain more accuracy for finding quickest path if the time expected gets updated with the change in speed of the vehicle (which can be obtained through gps) thus increasing the computation time. 
+We can attain more accuracy for finding quickest path if the time expected gets updated with the change in speed of the vehicle (which can be obtained through gps) thus increasing the computation time.
 
 **Rerouting:**
 
@@ -136,7 +136,3 @@ If a wrong turn is taken, the new position will be made the source node and the 
 [4].Global Practices on Road Traffic Signal Control: Fixed-Time Control at ... - Keshuang Tang, Manfred Boltze, Hideki Nakamura, Zong Tian - Google Books  - A study of time taken by vehicles to deccelerate and cross heavy traffic areas.
 [5].https://www.geeksforgeeks.org/a-search-algorithm/
 [6].https://en.wikipedia.org/wiki/Vector_tiles
-
-
-
-
