--- a/B19137.md
+++ b/B19137.md
@@ -1,4 +1,6 @@
-<h1>My own Google Map</h1>
+# Roshit Anand (@roshit-anand)
+
+<h2>My own Google Map</h2>
 
 <h3>Introduction</h3>
 
@@ -14,13 +16,13 @@ The maps will formed by merging the data obtained by road detection algorithms o
 
 The data attained by the gps can be used in many ways. As the gps uses the time delay in the signal from phone to the corresponding towers we can calculate the speed and an average speed on a road can used to get a tentative idea of speed limit on that specific path. Different speeds can also help us in finding paths like walking pathways(speed btw 2km/hr to 7km/hr), cycling pathways(speed btw 10km/hr to 18km/hr) and with keeping some error in mind we can also find which in direction the drivers are allowed to drive on a specific road.Gps can also help us in finding newly contructed roads as we can use a threshold like if about 20 cars per day passes through as route that is known in maps we can improve the maps.
 
-Talking about stored routes,the routes will be stored region wise in different servers all connected with a single network. For eg for India only we will have 2 servers which will further have different bifractions in which all the data of a specific region will be stored.The as the app searches any new shortest path for which it took more than a specific timelimit the new shortest path from A to B 
+Talking about stored routes,the routes will be stored region wise in different servers all connected with a single network. For eg for India only we will have 2 servers which will further have different bifractions in which all the data of a specific region will be stored.The as the app searches any new shortest path for which it took more than a specific timelimit the new shortest path from A to B
 it will be stored in the servers so when ever it is needed can be used.
 Describe the data attributes involved.
 
 <h3>Computing Quickest/Shortest Path</h3>
 
-We will be using the well known A* algorithm with some changes which will help us to get the shortest paths and the fastest path.For this first A* algorithm. In this algorithm the path finding is preffered in the direction of by using a new variable that is euclidean or manhattan distance from the position we are standing and we have to go .There is a cost calculated by adding the distance btw the nodes and the euclidean distance btw that node and the final node and the algo aims for the lowest cost to reach there. 
+We will be using the well known A* algorithm with some changes which will help us to get the shortest paths and the fastest path.For this first A* algorithm. In this algorithm the path finding is preffered in the direction of by using a new variable that is euclidean or manhattan distance from the position we are standing and we have to go .There is a cost calculated by adding the distance btw the nodes and the euclidean distance btw that node and the final node and the algo aims for the lowest cost to reach there.
 
 But if we use the gps to attain the average speed of a road or path at a specific time interval and we use the time=distance/(avg speed) instead of the distance btw nodes and the euclidean distance/(avg speed of that car) instead of euclidean distance(so to keep all the data in same measuring terms) we can find the fastest and mostly the shortest path. In total every one choses shortest path to get to destination as fast as possible.
 
